fix naming branch booking